<resources>
    <string name="app_name">Android Basic</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="grid_view">Grid View</string>
    <string name="frame_layout">Frame Layout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_user">Create User</string>
    <string name="list_view">List View</string>
    <string name="enter_your_name">Enter your name</string>
</resources>